--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <a class="blue item" routerLink="/blood-bank"><i class="add circle icon"></i>Blood Banks</a>
     <a class="blue item" routerLink="/camps"><i class="user icon"></i>Camps</a>
     <a class="blue item" routerLink="/user-manager"><i class="user icon"></i>User Management</a>
-    <a class="blue item" routerLink="/"><i class="info circle icon"></i>About</a>
+    <a class="blue item" routerLink="/about"><i class="info circle icon"></i>About</a>
 
     <a class="item right">
         <i class="doctor icon big"></i>|&nbsp;
