user management updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
             <div class="item">Profile</div>
             <div class="item">Settings</div>
             <div class="ui divider"></div>
-            <div class="item" routerLink="/login">Logout</div>
+            <div class="item" (click)="logout()">Logout</div>
           </div>
         </a>
 
