User deletion added

--- a/src/app/donate-blood/donate-blood.component.html
+++ b/src/app/donate-blood/donate-blood.component.html
@@ -294,7 +294,7 @@
 
           </div>
 
-          <div class="ui animated button fade red right large" (click)="(changePage('.personalInformation'))">
+          <div class="ui button animated red right large" (click)="(changePage('.personalInformation'))">
             <div class="visible content">Next</div>
             <div class="hidden content">
               <i class="right arrow icon"></i>
@@ -965,7 +965,7 @@
           </div>
           <br/>
 
-          <div class="ui animated button fade red right large" (click)="(changePage('.health_info'))">
+          <div class="ui animated button red right large" (click)="(changePage('.health_info'))">
             <div class="visible content">Next</div>
             <div class="hidden content">
               <i class="right arrow icon"></i>
@@ -1158,7 +1158,7 @@
             </table>
           </div>
           <br/>
-          <div class="ui animated button fade red right large" (click)="(changePage('.riskBeaviour'))">
+          <div class="ui animated button red right large" (click)="(changePage('.riskBeaviour'))">
             <div class="visible content">Next</div>
             <div class="hidden content">
               <i class="right arrow icon"></i>
@@ -1207,7 +1207,7 @@
 
               <br/>
 
-          <div class="ui animated button fade green right large" (click)="(submitForm(donorForm.value))">
+          <div class="ui animated button green right large" (click)="(submitForm(donorForm.value))">
             <div class="visible content">Submit Form</div>
             <div class="hidden content">
                 <i class="check circle icon"></i>
