--- a/src/app/user-manager/user-manager.component.html
+++ b/src/app/user-manager/user-manager.component.html
@@ -57,16 +57,14 @@
       <p></p>
     </div>
     <div class="actions">
-      <div class="ui approve button">
+      <div class="ui approve button" (click)='deleteUser("1")'>
         <i class="huge icons">
-                  <i class="big thin circle icon"></i>
-        <i class="Checkmark green icon"></i>
+          <i class="red trash icon"></i>
         </i>
       </div>
       <div class="ui cancel button">
         <i class="huge icons">
-                  <i class="big thin circle icon"></i>
-        <i class="Remove red icon"></i>
+          <i class="black remove circle icon"></i>
         </i>
       </div>
     </div>
