--- a/src/app/blood-bank/blood-bank.component.html
+++ b/src/app/blood-bank/blood-bank.component.html
@@ -9,8 +9,8 @@
           <thead class="full-width ui inverted table">
             <tr class="ui">
               <th>Blood Type</th>
-              <th>Current Value</th>
-              <th>Increase/ Decrease by</th>
+              <th>Current Value <span style="color: blue">&nbsp; (litres)</span></th>
+              <th>Increase/ Decrease by <span style="color: blue">&nbsp; (litres)</span></th>
               <th>Action</th>
               <th>Save</th>
             </tr>
@@ -20,7 +20,7 @@
 
             <tr>
               <td>O -</td>
-              <td>2</td>
+              <td>{{blood_counts[6]}}</td>
               <td>{{one}}</td>
               <td>
                 <button class="ui icon button" (click)="subtractValue1()">
@@ -43,7 +43,7 @@
 
             <tr>
               <td>O +</td>
-              <td>0</td>
+              <td>{{blood_counts[7]}}</td>
               <td>{{two}}</td>
               <td>
                 <button class="ui icon button" (click)="subtractValue2()">
@@ -66,7 +66,7 @@
 
             <tr>
               <td>A -</td>
-              <td>0</td>
+              <td>{{blood_counts[1]}}</td>
               <td>{{three}}</td>
               <td>
                 <button class="ui icon button" (click)="subtractValue3()">
@@ -89,7 +89,7 @@
 
             <tr>
               <td>A +</td>
-              <td>0</td>
+              <td>{{blood_counts[0]}}</td>
               <td>{{four}}</td>
               <td>
                 <button class="ui icon button" (click)="subtractValue4()">
@@ -112,7 +112,7 @@
 
             <tr>
               <td>B -</td>
-              <td>0</td>
+              <td>{{blood_counts[3]}}</td>
               <td>{{five}}</td>
               <td>
                 <button class="ui icon button" (click)="subtractValue5()">
@@ -135,7 +135,7 @@
 
             <tr>
               <td>B +</td>
-              <td>0</td>
+              <td>{{blood_counts[2]}}</td>
               <td>{{six}}</td>
               <td>
                 <button class="ui icon button" (click)="subtractValue6()">
@@ -158,7 +158,7 @@
 
             <tr>
               <td>AB -</td>
-              <td>0</td>
+              <td>{{blood_counts[5]}}</td>
               <td>{{seven}}</td>
               <td>
                 <button class="ui icon button" (click)="subtractValue7()">
@@ -180,7 +180,7 @@
 
             <tr>
               <td>AB +</td>
-              <td>0</td>
+              <td>{{blood_counts[4]}}</td>
               <td>{{eight}}</td>
               <td>
                 <button class="ui icon button" (click)="subtractValue8()">
