new PC additions

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -45,7 +45,7 @@
 
       </form>
 
-      <div class="ui small modal">
+      <div class="ui small registerModal modal">
         <div class="header">
           Register
         </div>
