--- a/src/app/user-manager/user-manager.component.html
+++ b/src/app/user-manager/user-manager.component.html
@@ -7,6 +7,7 @@
         <thead class="full-width ui inverted table">
           <tr class="ui">
             <th>Role</th>
+            <th>ID</th>
             <th>Full Name</th>
             <th>Username</th>
             <th>Registration Date</th>
@@ -18,6 +19,7 @@
         <tbody>
           <tr *ngFor="let user of Users">
             <td class="collapsing">{{user.role}}</td>
+            <td>{{user._id}}</td>
             <td>{{user.firstName}} {{user.lastName}}</td>
             <td>{{user.username}}</td>
             <td>{{user.entry_date}}</td>
@@ -39,8 +41,8 @@
         <tfoot class="full-width">
           <tr>
             <th></th>
-            <th colspan="6">
-              <div class="ui right floated small primary labeled icon button">
+            <th colspan="7">
+              <div (click)="registerForm()" class="ui right floated small primary labeled icon button">
                 <i class="add user icon"></i> Add User
               </div>
             </th>
@@ -73,3 +75,61 @@
   </div>
 
 </div>
+
+<div class="ui page addUser modal">
+  <div class="header">
+    Add User
+  </div>
+  <div class="content">
+    <form class="ui form" [formGroup]="registrationForm" novalidate>
+      <div class="field">
+        <div class="fields">
+
+          <div class="twelve ui wide field required">
+            <label>First Name</label>
+            <input type="text" formControlName="firstName" name="firstName" placeholder="First Name" required>
+          </div>
+
+          <div class="twelve ui wide field required">
+            <label>Last Name</label>
+            <input type="text" name="last Name" formControlName="lastName" placeholder="Last Name">
+          </div>
+
+          <div class="twelve ui wide field required">
+            <label>Email</label>
+            <input type="email" formControlName="email" name="email" placeholder="email" required>
+          </div>
+
+          <div class="twelve ui wide field required">
+            <label>ID Number</label>
+            <input type="text" formControlName="id_number" name="idNumber" placeholder="ID Number" required>
+          </div>
+        </div>
+
+        <div class="fields">
+
+          <div class="twelve ui wide field required">
+            <label>User Name</label>
+            <input type="text" formControlName="username" name="username" placeholder="User Name" required>
+          </div>
+
+          <div class="twelve ui wide field required">
+            <label>Password</label>
+            <input type="password" name="password" placeholder="Password">
+          </div>
+
+          <div class="twelve ui wide field required">
+            <label>Repeat Password</label>
+            <input type="password" formControlName="password" name="password" placeholder="Repeat Password" required>
+          </div>
+        </div>
+      </div>
+      <div class="actions">
+        <div class="ui green button" (click)="register(registrationForm.value)">Submit</div>
+        <div class="ui red button close" (click)="closeModal()">Cancel</div>
+      </div>
+    </form>
+  </div>
+
+</div>
+
